--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,22 @@
-@use 'scss-reset';
+@use "scss-reset";
+@import "_var.scss";
+@import "blocks/header.scss";
+
+body {
+    background-color: $body-color;
+}
+
+a {
+    text-decoration: none;
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.container {
+    max-width: 1400px;
+    padding: 0 20px;
+    margin: 0 auto;
+}
