--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,10 @@
 @use "scss-reset";
 @import "_var.scss";
-@import "blocks/header.scss";
+@import "sections/header.scss";
+@import "sections/enjoy.scss";
 
 body {
-    background-color: $body-color;
+    background-color: $light-color;
 }
 
 a {
@@ -19,4 +20,18 @@ a {
     max-width: 1400px;
     padding: 0 20px;
     margin: 0 auto;
+}
+
+.title {
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+}
+
+p {
+    font-family: "Inter", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
