--- a/src/scss/sections/enjoy.scss
+++ b/src/scss/sections/enjoy.scss
@@ -1,24 +1,21 @@
 .enjoy {
-    background-image: url("../../../public/images/background-enjoy.png");
-    background-position: center center;
-    background-repeat: no-repeat;
-    padding: 100px;
-    border-radius: 20px; 
-    overflow: hidden; 
-
     &__content {
-        width: 530px;
-        height: 444px;
+        background-image: url("../../../public/images/background-enjoy.png");
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 20px;
+        padding: 100px;
+
+        &-text {
+            width: 530px;
+            height: 444px;
+        }
     }
 
     &__title {
         color: $light-color;
         font-size: 72px;
-
-        span {
-            color: $accent-color;
-            font-style: italic;
-        }
     }
 
     &__descr {
@@ -28,9 +25,9 @@
 
     &__btn {
         position: relative;
-        display: flex; 
-        align-items: center; 
-        justify-content: center; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
         background-color: $light-color;
         border-radius: 100px;
         color: $text-color;
@@ -39,45 +36,45 @@
         font-size: 16px;
         width: 200px;
         height: 64px;
-        padding: 0 30px; 
+        padding: 0 30px;
         border: none;
         cursor: pointer;
         text-align: center;
         overflow: hidden;
         transition: background-color 0.3s ease;
-    
+
         span {
             position: relative;
             transition: transform 0.3s ease;
         }
-    
+
         &::after {
-            content: url("../../../public/images/coffee-cup.svg"); 
+            content: url("../../../public/images/coffee-cup.svg");
             position: absolute;
             width: 20px;
             height: 20px;
-            right: calc(50% - 10.5px); 
-            opacity: 0; 
-            transition: opacity 0.3s ease, transform 0.3s ease;
+            right: calc(50% - 10.5px);
+            opacity: 0;
+            transition:
+                opacity 0.3s ease,
+                transform 0.3s ease;
             transform: translateX(10.5px);
         }
-    
+
         &:hover {
-    
             span {
-                transform: translateX(-20px); 
+                transform: translateX(-20px);
             }
-    
+
             &::after {
                 opacity: 1;
-                transform: translateX(40.5px); 
+                transform: translateX(40.5px);
             }
         }
-    
+
         &:focus {
             outline: none;
-            box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2); 
+            box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.2);
         }
     }
-    
 }
