--- a/src/scss/sections/favourite-coffee.scss
+++ b/src/scss/sections/favourite-coffee.scss
@@ -80,7 +80,7 @@
             background-color: $btn-dark-color;
 
             svg path {
-                fill: currentColor;
+                fill: $light-color;
             }
         }
     }
