fixed hover for svg in slider

--- a/src/scss/sections/favourite-coffee.scss
+++ b/src/scss/sections/favourite-coffee.scss
@@ -78,9 +78,9 @@
 
         &:hover {
             background-color: $btn-dark-color;
-
+            
             svg path {
-                fill: $light-color;
+                stroke: $light-color;
             }
         }
     }
