--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "sections/header.scss";
 @import "sections/enjoy.scss";
 @import "sections/favourite-coffee.scss";
+@import "sections/about.scss";
 
 body {
     background-color: $light-color;
