--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 @import "sections/enjoy.scss";
 @import "sections/favourite-coffee.scss";
 @import "sections/about.scss";
+@import "sections/downloads.scss";
 
 body {
     background-color: $light-color;
@@ -42,4 +43,5 @@ p {
     font-weight: 400;
     font-style: normal;
     color: $text-color;
+    font-size: 16px;
 }
