footer is finished

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "sections/favourite-coffee.scss";
 @import "sections/about.scss";
 @import "sections/downloads.scss";
+@import "sections/footer.scss";
 
 body {
     background-color: $light-color;
