functional for tabs and tabs html

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "sections/about.scss";
 @import "sections/downloads.scss";
 @import "sections/footer.scss";
+@import "menu/tab.scss";
 
 body {
     background-color: $light-color;
