--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,3 +47,10 @@ p {
     color: $text-color;
     font-size: 16px;
 }
+
+button {
+    &:hover {
+        transition: 0.2s ease;
+        border: none;
+    }
+}
