--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -2,3 +2,5 @@ $light-color: #e1d4c9;
 $text-color: #403f3d;
 $accent-color: #b0907a;
 $btn-dark-color: #665f55;
+$light-border: #c1b6ad;
+$btn-dark-background: #665f55;
