--- a/src/scss/menu/tab.scss
+++ b/src/scss/menu/tab.scss
@@ -1,19 +1,50 @@
-.tab__item {
-    display: none;
-}
-
-.tab__item.active {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
+.tab__content {
+    margin-top: 25px;
+    height: 1052px;
 }
 
 .tab__card {
-    background: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    img {
+        border-radius: 40px;
+    }
+    border: 1px solid $light-border;
+    border-radius: 40px;
+}
+
+.tab__item {
+    display: grid;
+    grid-template-columns: repeat(4, 300px);
+    gap: 40px;
+    margin: 0 auto;
+
+    &-text {
+        padding: 20px;
+    }
+
+    &-title {
+        color: $text-color;
+        padding-bottom: 12px;
+    }
+
+    &-descr {
+        font-family: "Inter", serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        color: $text-color;
+        font-size: 16px;
+        padding-bottom: 12px;
+    }
+
+    &-price {
+        color: $text-color;
+        font-family: "Inter", serif;
+        font-optical-sizing: auto;
+        font-weight: 600;
+        font-style: normal;
+        font-size: 24px;
+        padding-bottom: 12px;
+    }
 }
 
 .tab__container-btn {
@@ -22,7 +53,6 @@
     gap: 16px;
     margin-top: 40px;
 
-    
     button {
         border: 1px solid $light-border;
         border-radius: 100px;
@@ -53,7 +83,6 @@
             }
         }
 
-
         &:focus {
             background-color: $btn-dark-background;
             color: $light-color;
@@ -63,5 +92,4 @@
             }
         }
     }
-
 }
