--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -34,3 +34,40 @@
         right: -20.5px;
     }
 }
+
+.burger__menu {
+    display: none;
+    width: 44px;
+    height: 44px;
+}
+
+@media (max-width: 768px) {
+    .burger__menu {
+        border: 1px solid $btn-dark-background;
+        border-radius: 100px;
+        display: flex;
+        align-items: center;
+        padding-top: 18px;
+        padding-bottom: 18px;
+        padding-left: 14px;
+        padding-right: 14px;
+
+        span {
+            display: block;
+            width: 16px;
+            height: 1.5px;
+            background-color: $text-color;
+            margin: 5px 0;
+            transition: all 0.3s ease;
+            border-radius: 10px;
+        }
+    }
+
+    .menu__list {
+        display: none;
+    }
+
+    .header__btn-wrapper {
+        display: none;
+    }
+}
