--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,3 +47,11 @@ p {
     color: $text-color;
     font-size: 16px;
 }
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 720px;
+        padding: 0 20px;
+        margin: 0 auto;
+    }
+}
