--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -1,6 +1,7 @@
 .about {
     margin-top: 100px;
     &__title {
+        color: $text-color;
         font-size: 60px;
         margin-bottom: 40px;
     }
