--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -36,3 +36,14 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .about__content-grid-img {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto;
+      }
+    
+      .grid__item:nth-child(n+3) {
+        display: none;
+      }
+}
