--- a/src/scss/sections/downloads.scss
+++ b/src/scss/sections/downloads.scss
@@ -67,3 +67,13 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .download__content {
+        flex-wrap: wrap;
+
+        &-img {
+            margin-top: 100px;
+        }
+    }
+}
