--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,6 +37,7 @@ a {
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
+    line-height: 1.25em;
 }
 
 p {
@@ -46,6 +47,7 @@ p {
     font-style: normal;
     color: $text-color;
     font-size: 16px;
+    line-height: 1.50em;
 }
 
 @media (max-width: 768px) {
